--- a/test/EntityFramework.InMemory.Tests/EntityFramework.InMemory.Tests.csproj
+++ b/test/EntityFramework.InMemory.Tests/EntityFramework.InMemory.Tests.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ApiConsistencyTest.cs" />
+    <Compile Include="InMemoryDbContextOptionsExtensionsTest.cs" />
     <Compile Include="InMemoryIntegerValueGeneratorFactoryTest.cs" />
     <Compile Include="InMemoryOptionsExtensionTest.cs" />
     <Compile Include="InMemoryDatabaseCreatorTest.cs" />
