--- a/test/EntityFramework.MySql.Design.FunctionalTests/EntityFramework.MySql.Design.FunctionalTests.csproj
+++ b/test/EntityFramework.MySql.Design.FunctionalTests/EntityFramework.MySql.Design.FunctionalTests.csproj
@@ -148,5 +148,43 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\EntityFramework.Core\EntityFramework.Core.csproj">
+      <Project>{71415cec-8111-4c73-8751-512d22f10602}</Project>
+      <Name>EntityFramework.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\EntityFramework.MySql.Design\EntityFramework.MySql.Design.csproj">
+      <Project>{2fbb53a9-dc67-43f8-8bc2-f28d9956fa71}</Project>
+      <Name>EntityFramework.MySql.Design</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\EntityFramework.MySql\EntityFramework.MySql.csproj">
+      <Project>{b1ee7923-5c55-4bb6-a891-dc000577e856}</Project>
+      <Name>EntityFramework.MySql</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\EntityFramework.Relational.Design\EntityFramework.Relational.Design.csproj">
+      <Project>{7028A7E3-0AD8-4606-A922-8189C8A704E0}</Project>
+      <Name>EntityFramework.Relational.Design</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\EntityFramework.Relational\EntityFramework.Relational.csproj">
+      <Project>{75c5a774-a3f3-43eb-97d3-dbe0cf2825d8}</Project>
+      <Name>EntityFramework.Relational</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EntityFramework.Core.FunctionalTests\EntityFramework.Core.FunctionalTests.csproj">
+      <Project>{6ab933c7-de2a-45f2-bdc6-e71a01ef7756}</Project>
+      <Name>EntityFramework.Core.FunctionalTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EntityFramework.MySql.FunctionalTests\EntityFramework.MySql.FunctionalTests.csproj">
+      <Project>{4A14E430-8704-4F96-9390-92A57DDA0561}</Project>
+      <Name>EntityFramework.MySql.FunctionalTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EntityFramework.Relational.Design.FunctionalTests\EntityFramework.Relational.Design.FunctionalTests.csproj">
+      <Project>{9ad9fe9f-dea7-4d2e-acc3-7cde92100cc8}</Project>
+      <Name>EntityFramework.Relational.Design.FunctionalTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EntityFramework.Relational.FunctionalTests\EntityFramework.Relational.FunctionalTests.csproj">
+      <Project>{82fad20c-28c6-4b48-b7e4-971ac821e27a}</Project>
+      <Name>EntityFramework.Relational.FunctionalTests</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
